--- a/app/ios/Flutter/Generated.xcconfig
+++ b/app/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=C:\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\SAMSUNG\OneDrive\바탕 화면\mealrecordui
+FLUTTER_APPLICATION_PATH=C:\Users\SAMSUNG\OneDrive\바탕 화면\mealrecordui\app
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
