--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -35,11 +35,14 @@ dependencies:
   http: ^1.0.0
   xml: ^6.3.0
   fl_chart: ^0.35.0
+  cloud_firestore: ^4.8.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.13.1
+  firebase_database: ^10.2.2
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +60,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - images/foxcharacter.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
