--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  shared_preferences: ^2.0.7
+  provider: ^5.0.0
   table_calendar: ^3.0.9
   intl: ^0.18.0
   http: ^1.0.0
@@ -43,6 +45,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.13.1
   firebase_database: ^10.2.2
+  firebase_messaging: ^14.6.2
 
 dev_dependencies:
   flutter_test:
